report changes
