# swagger/swagger.json
@@ -937,6 +937,35 @@
                 }
             }
         },
+        "/transactions/get-agent-cashouts/{agentId}": {
+            "get": {
+                "tags": [
+                    "transactions"
+                ],
+                "description": "get Cashouts by agent Id\n\u003cbr\u003e",
+                "operationId": "TransactionsController.Get Agent Cashouts With AgentID",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "agentId",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.CashOuts"
+                        }
+                    },
+                    "403": {
+                        "description": ":agentId is empty"
+                    }
+                }
+            }
+        },
         "/transactions/get-agent-transactions/{agentId}": {
             "get": {
                 "tags": [
@@ -958,6 +987,35 @@
                         "description": "",
                         "schema": {
                             "$ref": "#/definitions/models.Transactions"
+                        }
+                    },
+                    "403": {
+                        "description": ":agentId is empty"
+                    }
+                }
+            }
+        },
+        "/transactions/get-agent-transfers/{agentId}": {
+            "get": {
+                "tags": [
+                    "transactions"
+                ],
+                "description": "get Transfers by agent Id\n\u003cbr\u003e",
+                "operationId": "TransactionsController.Get Agent Transfers With AgentID",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "agentId",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.TransfersResponse"
                         }
                     },
                     "403": {
@@ -1419,6 +1477,73 @@
                 }
             }
         },
+        "models.CashOuts": {
+            "title": "CashOuts",
+            "type": "object",
+            "properties": {
+                "Active": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Amount": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "CashoutId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "CreatedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "DateCreated": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "DateModified": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "ModifiedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ReceiverName": {
+                    "type": "string"
+                },
+                "ReceiverNumber": {
+                    "type": "string"
+                },
+                "ReceivingAgentId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ReceivingBranchId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Receiving_balance_after": {
+                    "type": "number",
+                    "format": "float"
+                },
+                "Receiving_balance_before": {
+                    "type": "number",
+                    "format": "float"
+                },
+                "StatusCode": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "TransactionCode": {
+                    "type": "string"
+                },
+                "TransactionId": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "models.CashoutRequest": {
             "title": "CashoutRequest",
             "type": "object",
@@ -1707,6 +1832,78 @@
                     "format": "int64"
                 },
                 "TransactionType": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "models.TransfersResponse": {
+            "title": "TransfersResponse",
+            "type": "object",
+            "properties": {
+                "Active": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Amount": {
+                    "type": "number",
+                    "format": "float"
+                },
+                "CreatedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "DateCreated": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "DateModified": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "ModifiedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ReceiverName": {
+                    "type": "string"
+                },
+                "ReceiverNumber": {
+                    "type": "string"
+                },
+                "SenderName": {
+                    "type": "string"
+                },
+                "SenderNumber": {
+                    "type": "string"
+                },
+                "SendingAgentId": {
+                    "$ref": "#/definitions/models.Agents"
+                },
+                "SendingBranchId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Sending_balance_after": {
+                    "type": "number",
+                    "format": "float"
+                },
+                "Sending_balance_before": {
+                    "type": "number",
+                    "format": "float"
+                },
+                "StatusCode": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "TransactionCode": {
+                    "type": "string"
+                },
+                "TransactionId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "TransferId": {
                     "type": "integer",
                     "format": "int64"
                 }
